src/np222kk/dv507/a2/test/cases/negative/test_unary_03.ofp
void main() {
    char[] c = new char[4];
    int b = -(c);
}